echoserver/echoserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-ingress
  namespace: hello
spec:
  rules:
  - host: echoserver.kops.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
